Create add employee

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 @import "tailwindcss";
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
+@source "../node_modules/flowbite-datepicker";
