Update view employee to have dates

--- a/src/app/shared/components/dashboard/dashboard.component.html
+++ b/src/app/shared/components/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
           />
           <span
             class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-            >Flowbite</span
+            >Foritum Partners</span
           >
         </a>
       </div>
