--- a/src/app/shared/components/view-employees/view-employees.component.html
+++ b/src/app/shared/components/view-employees/view-employees.component.html
@@ -51,6 +51,8 @@
         <th scope="col" class="px-6 py-3">Email</th>
         <th scope="col" class="px-6 py-3">Name</th>
         <th scope="col" class="px-6 py-3">Department</th>
+        <th scope="col" class="px-6 py-3">Created At</th>
+        <th scope="col" class="px-6 py-3">Updated At</th>
       </tr>
     </thead>
     <tbody>
@@ -67,6 +69,8 @@
         <td class="px-6 py-4">{{item.email}}</td>
         <td class="px-6 py-4">{{item.name}}</td>
         <td class="px-6 py-4">{{item.department}}</td>
+        <td class="px-6 py-4">{{item.createdAt}}</td>
+        <td class="px-6 py-4">{{item.updatedAt}}</td>
         
       </tr>
     
