--- a/src/app/shared/components/view-employees/view-employees.component.html
+++ b/src/app/shared/components/view-employees/view-employees.component.html
@@ -69,8 +69,8 @@
         <td class="px-6 py-4">{{item.email}}</td>
         <td class="px-6 py-4">{{item.name}}</td>
         <td class="px-6 py-4">{{item.department}}</td>
-        <td class="px-6 py-4">{{item.createdAt}}</td>
-        <td class="px-6 py-4">{{item.updatedAt}}</td>
+        <td class="px-6 py-4">{{prettifyDate(item.createdAt)}}</td>
+        <td class="px-6 py-4">{{prettifyDate(item.updatedAt)}}</td>
         
       </tr>
     
